--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-upaas-router (0.1-dev4-1) precise; urgency=low
+upaas-router (0.1.0-1) precise; urgency=low
 
   * Initial release
 
- -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sun, 20 Oct 2013 19:12:00 +0200
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sun, 27 Oct 2013 15:57:37 +0100
