--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.1.2-1) precise; urgency=low
+
+  * Fixed nginx dependency
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sat, 16 Nov 2013 16:50:44 +0100
+
 upaas-router (0.1.1-1) precise; urgency=low
 
   * Updated dependencies for 0.2
