--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.1.3-1) precise; urgency=low
+
+  * Final deps
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sat, 16 Nov 2013 22:25:56 +0100
+
 upaas-router (0.1.2-1) precise; urgency=low
 
   * Fixed nginx dependency
