--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.2.0-1) precise; urgency=low
+
+  * Use custom uWSGI 2.0 deb package
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Thu, 06 Mar 2014 22:45:01 +0100
+
 upaas-router (0.1.3-1) precise; urgency=low
 
   * Final deps
