--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.2.1-2) precise; urgency=low
+
+  * Fixed socket directory creation
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sun, 09 Mar 2014 13:08:39 +0100
+
 upaas-router (0.2.1-1) precise; urgency=low
 
   * Run as www-data instead of root
