--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.2.4-1) precise; urgency=low
+
+  * Add vacuum option
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Mon, 10 Mar 2014 23:02:35 +0100
+
 upaas-router (0.2.3-1) precise; urgency=low
 
   * Don't fail if directory already exists
