--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.3.0-1) precise; urgency=low
+
+  * Drop nginx, use only uWSGI as HTTP/HTTPS frontend
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sun, 30 Mar 2014 13:21:17 +0200
+
 upaas-router (0.2.4-1) precise; urgency=low
 
   * Add vacuum option
