--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.3.2-1) precise; urgency=low
+
+  * Tweak limits
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sat, 05 Apr 2014 12:21:35 +0200
+
 upaas-router (0.3.1-1) precise; urgency=low
 
   * Fixed build
