--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.3.3-1) precise; urgency=low
+
+  * Generate SSL certificates using ssl-cert wrapper
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sat, 12 Apr 2014 15:08:28 +0200
+
 upaas-router (0.3.2-1) precise; urgency=low
 
   * Tweak limits
