--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.3.5-1) precise; urgency=low
+
+  * Fixed key path
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Sat, 12 Apr 2014 15:31:32 +0200
+
 upaas-router (0.3.4-1) precise; urgency=low
 
   * Create directory for certificates if missing
