--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+upaas-router (0.3.6-1) precise; urgency=low
+
+  * Updated cipher config
+
+ -- Łukasz Mierzwa <l.mierzwa@gmail.com>  Tue, 13 May 2014 00:37:31 +0200
+
 upaas-router (0.3.5-1) precise; urgency=low
 
   * Fixed key path
